<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inbox">



    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.venteran.chatFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_chat_inbox"/>

    <fragment
        android:id="@+id/nav_myprofile"
        android:name="com.example.venteran.ProfileFragment"
        android:label="@string/menu_myprofile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.venteran.contactus_fragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_about_us"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.venteran.My_Pref_frag"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings"/>
    <fragment
        android:id="@+id/nav_aboutus"
        android:label="@string/menu_aboutus"
        android:name="com.example.venteran.aboutus_fragment"
        tools:layout="@layout/fragment_about_us"/>
    <fragment
        android:id="@+id/nav_Global_Chat"
        android:label="@string/menu_Global_chat"
        android:name="com.example.venteran.ChatBoxActivity"
        tools:layout="@layout/activity_chat_box"/>


</navigation>