<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/alert_background">
    <TextView
        android:id="@+id/emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/emergency_head"
        android:textColor="@color/aquablue"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/emergency_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergency"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alatsi"
        android:paddingBottom="10dp"
        android:text="@string/emergency_msg"
        android:textColor="@color/halfgrey"
        android:textSize="16sp" />
    <RadioButton
        android:id="@+id/radiobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/radio_btn"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/emergency_txt"/>

    <Button
        android:id="@+id/cancelbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiobtn"
        android:layout_marginStart="45dp"
        android:backgroundTint="@color/contrastWhite"
        android:fontFamily="@font/alatsi"
        android:text="@string/cancel"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/proceedbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobtn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/cancelbtn3"
        android:backgroundTint="@color/contrastWhite"
        android:elevation="0dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/proceed"
        android:textColor="@color/aquablue" />
</RelativeLayout>