<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/alatsi"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/aquablue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:gravity="center"
        android:text="@string/tnc"
        android:textColorLink="@color/aquablue"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="26dp"
        app:ccp_areaCodeDetectedCountry="true"
        app:ccp_autoDetectCountry="true"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/reg_mobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/reg_mobile"
        android:layout_width="183dp"
        android:layout_height="41dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:fontFamily="@font/alatsi"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="331sp"
        android:layout_height="52sp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:backgroundTint="@color/aquablue"
        app:layout_constraintBottom_toTopOf="@+id/progreesbarforreg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_mobile" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/regbtn"
        android:id="@+id/progreesbarforreg"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regbtn"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="633dp"
        android:layout_height="634dp"
        android:layout_marginBottom="-270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_footer"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>